@@ -25,9 +25,6 @@
 
 using namespace std;
 
-// FIXME
-size_t pp_nr_counters = 1;
-
 namespace {
 
 #define GMON_VERSION 1
